--- a/src/styles/index.style.scss
+++ b/src/styles/index.style.scss
@@ -7,7 +7,7 @@
 
 body {
   background: black;
-  overflow: hidden;
+  // overflow: hidden;
 }
 
 #root {
@@ -21,15 +21,16 @@ canvas {
   bottom: 0;
   right: 0;
 
-  // transform: scaleX(-1);
+  transform: scaleX(-1);
 }
 
 .text {
+  width: 800px;
   color: lawngreen;
   font-size: 32px;
   font-family: 'mapo-dacapo';
-  white-space: nowrap;
   text-align: center;
+  word-break: keep-all;
 
   position: absolute;
   top: 10%;
@@ -41,7 +42,7 @@ canvas {
 
 
   &--1 {
-    transition: 2s 5s;
+    transition: opacity 2s 5s;
   }
   @keyframes textFadeIn {
     0% {
@@ -56,6 +57,10 @@ canvas {
     100% {
       opacity: 0;
     }
+  }
+
+  @media (max-width: 600px) {
+    width: 400px;
   }
 }
 
